Mostly finished part 1, tests missing

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: andresj <andresj@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/05/02 13:35:15 by andresj          ###   ########.fr        #
+#    Updated: 2023/05/04 09:05:51 by andresj          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CC=cc
 CFLAGS=-g -Wall -Wextra -Werror
 
 %.o: %.c %.h
-	$(CC) $(CFLAGS) -c $^
+	$(CC) $(CFLAGS) -c $^ libft.h
 
 test: *.o test.c
 	$(CC) $(CFLAGS) -o test test.c *.o
