completed all files, preparing make

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,26 +6,82 @@
 #    By: andresj <andresj@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/05/04 09:05:51 by andresj          ###   ########.fr        #
+#    Updated: 2023/05/16 07:40:55 by andresj          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=libft.a
-CC=cc
-CFLAGS=-g -Wall -Wextra -Werror
+# The name of the executable
+EXE = test
+# The name of the archived library
+ARCHIVE = libft.a
+# Frontend program when linking
+CC = cc
+# Flags for compilation
+CFLAGS = -g -Wall -Wextra -Werror
+# Libraries to link with
+LIBS = libft.h
+# The name of the source files
+SOURCES = ft_atoi.c \
+					ft_bzero.c \
+					ft_calloc.c \
+					ft_isalnum.c \
+					ft_isalpha.c \
+					ft_isascii.c \
+					ft_iscases.c \
+					ft_isdigit.c \
+					ft_isprint.c \
+					ft_itoa.c \
+					ft_memchr.c \
+					ft_memcmp.c \
+					ft_memcpy.c \
+					ft_memmove.c \
+					ft_memset.c \
+					ft_putchar_fd.c \
+					ft_putendl_fd.c \
+					ft_putnbr_fd.c  \
+					ft_putstr_fd.c  \
+					ft_split.c \
+					ft_strchr.c \
+					ft_strdup.c \
+					ft_striteri.c \
+					ft_strjoin.c \
+					ft_strlcat.c \
+					ft_strlcpy.c \
+					ft_strlen.c \
+					ft_strmapi.c \
+					ft_strncmp.c \
+					ft_strnstr.c \
+					ft_strrchr.c \
+					ft_strtrim.c \
+					ft_substr.c \
+					ft_tolower.c \
+					ft_toupper.c \
+					test.c
+# This creates a list of object files from the source files
+OBJECTS = $(SOURCES:%.c=%.o)
 
-%.o: %.c %.h
-	$(CC) $(CFLAGS) -c $^ libft.h
+%.o: %.c $(LIBS)
+	$(CC) $(CFLAGS) -c $@ $^ $(LIBS)
 
-test: *.o test.c
-	$(CC) $(CFLAGS) -o test test.c *.o
-
+# The first target, this will be the default target if none is specified
+# This target tells "make" to make the "all" target
+default: all
+all: $(EXE)
+# This will link the executable from the object files
+$(EXE): $(OBJECTS) test.c
+    $(CC) $(CFLAGS) $(OBJECTS) -o $(EXE) $(LIBS)
 all:
 	$(CC) $(CFLAGS) -o $(NAME)
 
+# Target to clean up after us
 clean:
-	rm *.o $@ $^
+    -rm -f $(EXE)      # Remove the executable file
+    -rm -f $(OBJECTS)  # Remove the object files
+# clean:
+# 	rm *.o $@ $^
 
 fclean:
 
 re:
+
+bonus:
