--- a/ft_printf/turn_in/Makefile
+++ b/ft_printf/turn_in/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ajacome- <ajacome-@student.42.fr>          +#+  +:+       +#+         #
+#    By: andresj <andresj@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/07/17 11:19:04 by ajacome-         ###   ########.fr        #
+#    Updated: 2023/07/23 05:41:39 by andresj          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@
 NAME = libftprintf.a
 
 # Libraries to link with
-HEAD = libft.h
+LIBRARIES = libft/libft.a
 
 # Frontend program when linking
 CC = gcc
@@ -23,57 +23,24 @@ CC = gcc
 CFLAGS = -g -Wall -Wextra -Werror -I.
 
 # The name of the source files
-SOURCES = ft_iscases.c \
-ft_atoi.c \
-ft_bzero.c \
-ft_calloc.c \
-ft_isalnum.c \
-ft_isalpha.c \
-ft_isascii.c \
-ft_isdigit.c \
-ft_isprint.c \
-ft_itoa.c \
-ft_memchr.c \
-ft_memcmp.c \
-ft_memcpy.c \
-ft_memmove.c \
-ft_memset.c \
-ft_putchar_fd.c \
-ft_putendl_fd.c \
-ft_putnbr_fd.c  \
-ft_putstr_fd.c  \
-ft_split.c \
-ft_strchr.c \
-ft_strdup.c \
-ft_striteri.c \
-ft_strjoin.c \
-ft_strlcat.c \
-ft_strlcpy.c \
-ft_strlen.c \
-ft_strmapi.c \
-ft_strncmp.c \
-ft_strnstr.c \
-ft_strrchr.c \
-ft_strtrim.c \
-ft_substr.c \
-ft_tolower.c \
-ft_toupper.c \
+SOURCES = ft_printf.c \
+	ft_printf_char.c \
+	ft_printf_flags.c \
+	ft_printf_hex.c \
+	ft_printf_numbers.c \
+	ft_printf_parsef.c \
+	ft_printf_writes.c \
+	libft \
+	libftprintf.h
 
-BONUSSRC = ft_lstnew.c \
-ft_lstadd_front.c \
-ft_lstsize.c \
-ft_lstlast.c \
-ft_lstadd_back.c \
-ft_lstdelone.c \
-ft_lstclear.c \
-ft_lstiter.c \
-ft_lstmap.c \
+# Extracted object files
+$(EXT_OBJ): $(LIBRARIES:.a=.o)
+	ar -x $(LIBRARIES)
 
 # This creates a list of object files from the source files
 OBJECTS = $(SOURCES:%.c=%.o)
-BONUSOBJECTS = $(BONUSSRC:%.c=%.o)
 
-$(NAME): $(OBJECTS)
+$(NAME): $(OBJECTS) $(EXT_OBJ)
 	ar rcs $@ $^
 
 default: all
@@ -82,20 +49,14 @@ all: $(NAME)
 
 # Remove the object files
 clean:
-	rm -f $(OBJECTS) $(BONUSOBJECTS)
+	rm -f $(OBJECTS) $(EXT_OBJ)
 
 fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
 
-bonus: .bonus
-
-.bonus: $(BONUSOBJECTS) $(OBJECTS)
-	ar rcs $(NAME) $(BONUSOBJECTS) $(OBJECTS)
-	touch .bonus
-
-%.o: %.c $(HEAD) Makefile
+%.o: %.c $(HEAD)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 .PHONY: all clean fclean re
