printfffff new branch

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: ajacome- <ajacome-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/07/24 11:33:20 by ajacome-         ###   ########.fr        #
+#    Updated: 2023/07/24 12:52:18 by ajacome-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,11 +50,12 @@ OBJECTS = $(addprefix $(DIROBJS), $(SOURCES:%.c=%.o))
 $(DIROBJS):
 	mkdir -p $(DIROBJS)
 
-$(DIROBJS)%.o : $(DIRSRC)%.c $(PRINTLIB)
+$(DIROBJS)%.o : %.c $(PRINTLIB) $(EXT_OBJ)
 	$(CC) $(FLAGS) -c $< -o $@
 
-$(NAME): $(LIBFT) $(DIROBJS) $(OBJECTS)
-	$(AR) $(NAME) $(OBJECTS)
+$(NAME): $(LIBFT) $(DIROBJS) $(OBJECTS) $(EXT_OBJ)
+	cp $(LIBFT) $(NAME)
+	$(AR) $(NAME) $(OBJECTS) $(EXT_OBJ)
 
 default: all
 
@@ -62,8 +63,9 @@ all: $(NAME)
 
 # Remove the object files
 clean:
-	$(RM) $(OBJECTS) $(EXT_OBJ)
-	$(RM) $(addprefix $(DIROBJS), $(notdir$(OBJECTS)))
+	$(RM) $(OBJECTS)
+	$(RM) $(EXT_OBJ)
+	$(RM) -r $(DIROBJS)
 
 fclean: clean
 	$(RM) $(NAME)
@@ -73,10 +75,10 @@ re: fclean all
 $(LIBFT):
 	make -C $(DIRLIBFT) all
 
-test: $(DIRTEST)test.c $(NAME)
-	$(CC) $(CFLAGS) -o $@ $< $(NAME)
+test: $(DIRTEST)test.c $(OBJECTS) $(LIBFT)
+	$(CC) $(CFLAGS) -o ./tests/$@ $< $(OBJECTS) $(LIBFT)
 
-%.o: %.c $(PRINTLIB) $(EXT_OBJ)
-	$(CC) $(CFLAGS) -c $< -o $@
+# %.o: %.c $(PRINTLIB) $(EXT_OBJ)
+# 	$(CC) $(CFLAGS) -c $< -o $@
 
 .PHONY: all clean fclean re libft
