--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -6,9 +6,11 @@
 #    By: ajacome- <ajacome-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/07/15 18:06:30 by ajacome-         ###   ########.fr        #
+#    Updated: 2023/07/24 11:49:25 by ajacome-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
+
+DIROBJS = ./objs/
 
 # The name of the archived library
 NAME = libft.a
@@ -23,27 +25,36 @@ CC = gcc
 CFLAGS = -g -Wall -Wextra -Werror -I.
 
 # The name of the source files
-SOURCES = ft_iscases.c \
+SOURCES = ft_utox.c \
+ft_utoa.c \
+ft_strupper.c \
+ft_ltox.c \
+ft_strnstr.c \
+ft_strrev.c \
+ft_split.c \
+ft_strchr.c \
+ft_strrchr.c \
+ft_strtrim.c \
+ft_putchar_fd.c \
+ft_putstr_fd.c \
+ft_putnbr_fd.c \
 ft_atoi.c \
 ft_bzero.c \
 ft_calloc.c \
 ft_isalnum.c \
 ft_isalpha.c \
 ft_isascii.c \
+ft_iscases.c \
 ft_isdigit.c \
 ft_isprint.c \
 ft_itoa.c \
+ft_lstsize.c \
 ft_memchr.c \
 ft_memcmp.c \
 ft_memcpy.c \
 ft_memmove.c \
 ft_memset.c \
-ft_putchar_fd.c \
 ft_putendl_fd.c \
-ft_putnbr_fd.c  \
-ft_putstr_fd.c  \
-ft_split.c \
-ft_strchr.c \
 ft_strdup.c \
 ft_striteri.c \
 ft_strjoin.c \
@@ -52,12 +63,10 @@ ft_strlcpy.c \
 ft_strlen.c \
 ft_strmapi.c \
 ft_strncmp.c \
-ft_strnstr.c \
-ft_strrchr.c \
-ft_strtrim.c \
 ft_substr.c \
 ft_tolower.c \
 ft_toupper.c \
+
 
 BONUSSRC = ft_lstnew.c \
 ft_lstadd_front.c \
