--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -6,44 +6,29 @@
 #    By: ajacome- <ajacome-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/07/31 18:53:08 by ajacome-         ###   ########.fr        #
+#    Updated: 2023/08/01 10:54:27 by ajacome-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-OBJ_DIR = ./obj/
-SRC_DIR = ./src/
+# **************************** formating ************************************* #
+white = \033[1;37m
+black = \033[0;30m
+red = \033[0;31m
+blue = \033[0;34m
+green = \033[0;32m
+
+# **************************** variables ************************************* #
+objects_dir = ./obj/
+include_dir = include/
 
 # The name of the archived library
 NAME = libft.a
 
-# Libraries to link with
-HEAD = libft.h
-
-# Frontend program when linking
-CC = gcc
-
-# Flags for compilation
-CFLAGS 		:= -g -Wall -Wextra -Werror
-# -I is a preprocessor flag, not a compiler flag
-CPPFLAGS	:= -I include/ -MMD -MP
+# Header files
+head = libft.h
 
 # The name of the source files
-SRC = $(wildcard $(SRC_DIR)/*.c)
-SRC = \
-ft_utox.c \
-ft_utoa.c \
-ft_strupper.c \
-ft_ltox.c \
-ft_lltox.c \
-ft_strnstr.c \
-ft_strrev.c \
-ft_split.c \
-ft_strchr.c \
-ft_strrchr.c \
-ft_strtrim.c \
-ft_putchar_fd.c \
-ft_putstr_fd.c \
-ft_putnbr_fd.c \
+src = \
 ft_atoi.c \
 ft_bzero.c \
 ft_calloc.c \
@@ -54,13 +39,28 @@ ft_iscases.c \
 ft_isdigit.c \
 ft_isprint.c \
 ft_itoa.c \
+ft_lltox.c \
+ft_lstadd_back.c \
+ft_lstadd_front.c \
+ft_lstclear.c \
+ft_lstdelone.c \
+ft_lstiter.c \
+ft_lstlast.c \
+ft_lstmap.c \
+ft_lstnew.c \
 ft_lstsize.c \
+ft_ltox.c \
 ft_memchr.c \
 ft_memcmp.c \
 ft_memcpy.c \
 ft_memmove.c \
 ft_memset.c \
+ft_putchar_fd.c \
 ft_putendl_fd.c \
+ft_putnbr_fd.c \
+ft_putstr_fd.c \
+ft_split.c \
+ft_strchr.c \
 ft_strdup.c \
 ft_striteri.c \
 ft_strjoin.c \
@@ -69,41 +69,55 @@ ft_strlcpy.c \
 ft_strlen.c \
 ft_strmapi.c \
 ft_strncmp.c \
+ft_strnstr.c \
+ft_strrchr.c \
+ft_strrev.c \
+ft_strtrim.c \
+ft_strupper.c \
 ft_substr.c \
 ft_tolower.c \
 ft_toupper.c \
-ft_lstnew.c \
-ft_lstadd_front.c \
-ft_lstsize.c \
-ft_lstlast.c \
-ft_lstadd_back.c \
-ft_lstdelone.c \
-ft_lstclear.c \
-ft_lstiter.c \
-ft_lstmap.c 
+ft_utoa.c \
+ft_utox.c \
+
+
+# Frontend program when linking
+CC = gcc
+
+# Flags for compilation
+CFLAGS = -g -Wall -Wextra -Werror
+# -I is a preprocessor flag, not a compiler flag
+CPPFLAGS = -I $(include_dir). -MMD -MP
 
 # This creates a list of object files from the source files
-OBJ := $(addprefix $(OBJ_DIR), $(SRC:%.c=%.o))
+objects = $(addprefix $(objects_dir), $(src:%.c=%.o))
 
-default: all
-
+# **************************** RULES ***************************************** #
 all: $(NAME)
 
-$(OBJ_DIR)%.o: %.c $(OBJ_DIR) Makefile
+# Set dependancy for all object files from the libft.h header file
+$(objects): $(include_dir)$(head)
+# 
+$(objects_dir):
+	@echo Created /obj/
+	@mkdir -p $(objects_dir)
+
+$(objects_dir)%.o: %.c Makefile | $(objects_dir)
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
-$(NAME): $(OBJ_DIR) $(OBJ)
-	ar rcs $@ $(OBJ)
+$(NAME): $(objects_dir) $(objects)
+	@echo Archiving:
+	ar rcs $@ $(objects)
 
-$(OBJ_DIR):
-	mkdir -p $(OBJ_DIR)
+.PHONY: all clean fclean re
 
 clean:
-	rm -rf $(OBJ_DIR)
+	rm -rf $(objects_dir)
 
 fclean: clean
-	rm -f $(NAME)
+	rm -rf $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+# Include the generated dependency files
+-include $(objects:.o=.d)
