--- a/1_1_get_next_line/Makefile
+++ b/1_1_get_next_line/Makefile
@@ -6,7 +6,7 @@
 #    By: ajacome- <ajacome-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/02 10:33:54 by andresj           #+#    #+#              #
-#    Updated: 2023/08/03 08:13:54 by ajacome-         ###   ########.fr        #
+#    Updated: 2023/08/04 12:39:05 by ajacome-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,8 +16,8 @@ c_red		= \033[0;31m
 c_green		= \033[0;32m
 c_yellow	= \033[0;33m
 c_blue		= \033[0;34m
-c_purple	= \e[0;35m
-c_cyan		= \e[0;36m
+c_purple	= \033[0;35m
+c_cyan		= \033[0;36m
 c_white		= \033[1;37m
 c_reset		= \033[0m
 
@@ -28,10 +28,11 @@ test_dir = ./tests/
 
 # **************************** variables ************************************* #
 # The name of the archived library
-NAME = libftprintf.a
+NAME = test
+BUFFER_SIZE = 42
 
 # Header files
-print_head = ft_printf.h
+gnl_head = get_next_line.h
 test_head = test.h
 
 # The name of the source files
@@ -50,7 +51,8 @@ CC = gcc
 # Flags for compilation
 CFLAGS = -g -Wall -Wextra -Werror
 # -I is a preprocessor flag, not a compiler flag
-CPPFLAGS = -I $(include_dir)$(print_head) -MMD -MP
+CPPFLAGS = -I $(include_dir)$(gnl_head) -MMD -MP
+BUFFER = -D BUFFER_SIZE=$(BUFFER_SIZE)
 
 # This creates a list of object files from the source files
 objects = $(addprefix $(objects_dir), $(src:%.c=%.o))
@@ -58,10 +60,10 @@ objects = $(addprefix $(objects_dir), $(src:%.c=%.o))
 dependacies = $(objects:.o=.d)
 
 # **************************** rules ***************************************** #
-all: $(NAME)
+all: no_buffer
 
 # Set dependancy for all object files from the libft.h header file
-$(objects): $(include_dir)$(print_head)
+$(objects): $(include_dir)$(gnl_head)
 
 # Creates the obj directory to store object and dependancy files
 $(objects_dir):
@@ -72,12 +74,19 @@ $(objects_dir):
 $(objects_dir)%.o: %.c Makefile | $(objects_dir)
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
-# Create archive library
-$(NAME): $(objects_dir) $(objects) Makefile
-	@echo "$(c_blue)Archiving:$(c_reset)"
-	ar rcs $@ $(objects)
+# # Create archive library
+# $(NAME): $(no_buffer)
+# 	$(no_buffer)
 
-.PHONY: all clean fclean re
+buffer: $(objects_dir) $(objects) Makefile
+	@echo "$(c_blue)Compiled using $(c_reset)BUFFER_SIZE = $(c_yellow)$(BUFFER_SIZE) $(c_reset)"
+	@$(CC) $(CFLAGS) $(CPPFLAGS) $(BUFFER) *.c -o $(test_dir)$@
+
+no_buffer: $(objects_dir) $(objects) Makefile
+	@echo "$(c_blue)Compiled using default $(c_reset)BUFFER_SIZE"
+	@$(CC) $(CFLAGS) $(CPPFLAGS) *.c -o $(test_dir)$@
+
+.PHONY: all clean fclean re buffer
 
 clean:
 	@echo "$(c_blue)Deleting object files and dependacies...$(c_reset)"
@@ -93,15 +102,15 @@ re: fclean all
 -include $(dependacies)
 
 # **************************** testing *************************************** #
-test_objects = $(addprefix $(test_dir)$(objects_dir), $(src:%.c=%.o))
+# test_objects = $(addprefix $(test_dir)$(objects_dir), $(src:%.c=%.o))
 
-$(test_objects): $(test_dir)$(include_dir)$(head)
+# $(test_objects): $(test_dir)$(include_dir)$(head)
 
-test: $(test_dir)$(test_src) $(objects_dir) $(objects)
-	@$(CC) $(CFLAGS) -I $(test_dir)$(test_head) -o $(test_dir)$@ $< $(objects)
-	@echo "$(c_yellow)Starting test: $(c_reset)"
-	@./tests/test
+# test: $(test_dir)$(test_src) $(objects_dir) $(objects)
+# 	@$(CC) $(CFLAGS) -I $(test_dir)$(test_head) -o $(test_dir)$@ $< $(objects)
+# 	@echo "$(c_yellow)Starting test: $(c_reset)"
+# 	@./tests/test
 
-$(test_dir)$(objects_dir):
-	@echo "$(c_blue)Created directory: $(c_reset)tests/obj/"
-	@mkdir -p $(test_dir)$(objects_dir)	
+# $(test_dir)$(objects_dir):
+# 	@echo "$(c_blue)Created directory: $(c_reset)tests/obj/"
+# 	@mkdir -p $(test_dir)$(objects_dir)	
