--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,13 @@
 	"cstdint": "c",
 	"sstream": "c",
 	"ft_printf.h": "c",
-	"get_next_line.h": "c"
+	"get_next_line.h": "c",
+	"__split_buffer": "c",
+	"bitset": "c",
+	"initializer_list": "c",
+	"string": "c",
+	"string_view": "c",
+	"unordered_map": "c",
+	"vector": "c"
 }
 }
